--- a/do_an/package.json
+++ b/do_an/package.json
@@ -25,8 +25,10 @@
     "react-native": "0.72.6",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-image-slider-box": "^2.0.7",
+    "react-native-modal": "^13.0.1",
     "react-native-modals": "^0.22.3",
     "react-native-razorpay": "^2.3.0",
+    "react-native-toast-message": "^2.2.0",
     "react-redux": "^9.0.4"
   },
   "devDependencies": {
