--- a/do_an/package.json
+++ b/do_an/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
@@ -20,7 +20,7 @@
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "jwt-decode": "^3.1.2",
-    "lottie-react-native": "^6.4.1",
+    "lottie-react-native": "5.1.6",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-dropdown-picker": "^5.4.6",
@@ -32,7 +32,8 @@
     "react-redux": "^9.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-typescript": "^7.23.6"
   },
   "private": true
 }
