--- a/do_an/package.json
+++ b/do_an/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
@@ -18,6 +19,7 @@
     "axios": "^1.6.2",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~49.0.15",
+    "expo-google-app-auth": "~8.3.0",
     "expo-status-bar": "~1.6.0",
     "jwt-decode": "^3.1.2",
     "lottie-react-native": "5.1.6",
@@ -25,6 +27,7 @@
     "react-native": "0.72.6",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-image-slider-box": "^2.0.7",
+    "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-modal": "^13.0.1",
     "react-native-modals": "^0.22.3",
     "react-native-razorpay": "^2.3.0",
